--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -7,11 +7,13 @@
     "dev": "vite",
     "build": "tsc --noEmit && vite build",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run"
   },
   "dependencies": {
     "@graphen/shared": "workspace:*",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@uiw/react-md-editor": "^4.0.11",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
@@ -21,10 +23,15 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "jsdom": "^28.1.0",
     "typescript": "^5.7.3",
-    "vite": "^5.4.12"
+    "vite": "^5.4.12",
+    "vitest": "^2.1.8"
   }
 }
